🚧 Add reminders atribute in request tool

--- a/notebooks/tool.ipynb
+++ b/notebooks/tool.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "import re\n",
     "from uuid import uuid4\n",
     "from datetime import datetime\n",
-    "from typing import Any, Dict, List, Optional, Type\n",
+    "from typing import Any, Dict, List, Optional, Union, Type\n",
     "\n",
     "from langchain_core.callbacks import CallbackManagerForToolRun\n",
     "\n",
@@ -132,6 +132,17 @@
     "        delault=None,\n",
     "        description=\"The list of attendees for the event.\"\n",
     "    )\n",
+    "    reminders: Union[None, bool, List[Dict[str, Any]]] = Field(\n",
+    "        default=None,\n",
+    "        description=(\"The reminders for the event.\"\n",
+    "                     \"If reminders are needed but are not specific, then set to 'True'\"\n",
+    "                     \"If if specified, then set as [{'method': 'email', 'minutes': <minutes>}]\"\n",
+    "                     \"Or set as [{'method': 'popup', 'minutes': <minutes>}]\"\n",
+    "                     \"Where <minutes> is the number of minutes before the event, and it may be an operation.\"\n",
+    "                     \"60 * 1 = 1 hour.\"\n",
+    "                     \"60 * 24 = 1 day.\"\n",
+    "                     )\n",
+    "    )\n",
     "    conferenceData: Optional[bool] = Field(\n",
     "        default=None,\n",
     "        description=\"Whether to include conference data.\"\n",
@@ -161,6 +172,7 @@
     "        location: Optional[str] = None,\n",
     "        description: Optional[str] = None, \n",
     "        attendees: Optional[List[str]] = None,\n",
+    "        reminders: Union[None, bool, List[Dict[str, Any]]] = None,\n",
     "        conferenceData: Optional[bool] = None\n",
     "    ) -> Dict[str, Any]:\n",
     "        \"\"\"Prepare the event body.\"\"\"\n",
@@ -180,6 +192,22 @@
     "                if not valid:\n",
     "                    raise ValueError(f\"Invalid email address: {attendee}\")\n",
     "                attendees_mails.append({\"email\": attendee})\n",
+    "        reminders_info = None\n",
+    "        if reminders: \n",
+    "            if reminders is True:\n",
+    "                reminders_info = {\n",
+    "                    \"useDefault\": True\n",
+    "                }\n",
+    "            elif isinstance(reminders, list):\n",
+    "                for reminder in reminders:\n",
+    "                    if 'method' not in reminder or 'minutes' not in reminder:\n",
+    "                        raise ValueError(\"The reminders must have 'method' and 'minutes' keys.\")\n",
+    "                    if reminder['method'] not in ['email', 'popup']:\n",
+    "                        raise ValueError(\"The reminders method must be 'email' or 'popup'.\")\n",
+    "                reminders_info = {\n",
+    "                    'useDefault': False,\n",
+    "                    \"overrides\": reminders \n",
+    "                }\n",
     "        if conferenceData:\n",
     "            conferenceData = {\n",
     "                \"createRequest\": {\n",
@@ -197,6 +225,7 @@
     "            \"start\": {\"dateTime\": start, \"timeZone\": timezone},\n",
     "            \"end\": {\"dateTime\": end, \"timeZone\": timezone},\n",
     "            \"attendees\": attendees_mails, \n",
+    "            \"reminders\": reminders_info,\n",
     "            \"conferenceData\": conferenceData\n",
     "        }\n",
     "        return event\n",
@@ -209,6 +238,7 @@
     "        location: Optional[str] = None,\n",
     "        description: Optional[str] = None,\n",
     "        attendees: Optional[List[str]] = None,\n",
+    "        reminders: Union[None, bool, List[Dict[str, Any]]] = None,\n",
     "        conferenceData: Optional[bool] = None, \n",
     "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
     "    ) -> str:\n",
@@ -220,6 +250,7 @@
     "                                       location=location, \n",
     "                                       description=description, \n",
     "                                       attendees=attendees, \n",
+    "                                       reminders=reminders,\n",
     "                                       conferenceData=conferenceData)\n",
     "            \n",
     "            conferenceVersion = 1 if conferenceData else 0\n",
@@ -233,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,16 +332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[CalendarCreateEvent(api_resource=<googleapiclient.discovery.Resource object at 0x11f57b620>)]"
+       "[CalendarCreateEvent(api_resource=<googleapiclient.discovery.Resource object at 0x13a4546e0>)]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +382,7 @@
      "output_type": "stream",
      "text": [
       "ContentString: \n",
-      "ToolCalls: [{'name': 'create_calendar_event', 'args': {'summary': 'Reunion con el equipo', 'start_datetime': '2024-12-10 10:00:00', 'end_datetime': '2024-12-10 11:00:00', 'attendees': None}, 'id': 'call_Q3HDcGAc7JbyBSXTVzDdEkDD', 'type': 'tool_call'}]\n"
+      "ToolCalls: [{'name': 'create_calendar_event', 'args': {'summary': 'Reunion con el equipo', 'start_datetime': '2024-12-10 10:00:00', 'end_datetime': '2024-12-10 11:00:00', 'attendees': None}, 'id': 'call_HUt7wjLF6CxECZFrLUtfIe5q', 'type': 'tool_call'}]\n"
      ]
     }
    ],
@@ -375,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -395,28 +426,32 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "Create an event today with title 'BETO y Alondra' at 10:00am\n",
+      "Crea un evento el 20 de octubre a las 2pm con el titulo 'Reunion con el equipo'. y que me recuerde 10 minutos antes. y por correo dos diasn antes\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  create_calendar_event (call_Uz3951ZhMygq1HI7RotQby54)\n",
-      " Call ID: call_Uz3951ZhMygq1HI7RotQby54\n",
+      "  create_calendar_event (call_SppwMl1Eg3vkSNqZuAaGiYoJ)\n",
+      " Call ID: call_SppwMl1Eg3vkSNqZuAaGiYoJ\n",
       "  Args:\n",
-      "    summary: BETO y Alondra\n",
-      "    start_datetime: 2024-10-19 10:00:00\n",
-      "    end_datetime: 2024-10-19 11:00:00\n",
+      "    summary: Reunion con el equipo\n",
+      "    start_datetime: 2024-10-20 14:00:00\n",
+      "    end_datetime: 2024-10-20 15:00:00\n",
       "    attendees: None\n",
+      "    reminders: [{'method': 'popup', 'minutes': 10}, {'method': 'email', 'minutes': 2880}]\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: create_calendar_event\n",
       "\n",
-      "https://www.google.com/calendar/event?eid=bmdpZm85MzZpOWtucDh1Yzd1azNqdGh2MWMgam9yZ2VhbmczM0Bt\n",
+      "https://www.google.com/calendar/event?eid=aTU2cTZndDlqYjc2Nm1zNTgxbWZ1bjRkajQgam9yZ2VhbmczM0Bt\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The event titled \"BETO y Alondra\" has been created for today at 10:00 AM. You can view it [here](https://www.google.com/calendar/event?eid=bmdpZm85MzZpOWtucDh1Yzd1azNqdGh2MWMgam9yZ2FuZ3MzM0Bt).\n"
+      "He creado el evento titulado \"Reunión con el equipo\" para el 20 de octubre a las 2:00 PM. Además, te recordaré 10 minutos antes mediante un aviso emergente y recibirás un recordatorio por correo electrónico dos días antes. \n",
+      "\n",
+      "Puedes ver el evento [aquí](https://www.google.com/calendar/event?eid=aTU2cTZndDlqYjc2Nm1zNTgxbWZ1bjRkajQgam9yZ2VhbmczM0Bt).\n"
      ]
     }
    ],
    "source": [
-    "example_query = \"Create an event today with title 'BETO y Alondra' at 10:00am\"\n",
+    "# example_query = \"Crea un evento el 20 de octubre a las 12pm con el titulo 'Reunion con el equipo'.\"\n",
+    "example_query = \"Crea un evento el 20 de octubre a las 2pm con el titulo 'Reunion con el equipo'. y que me recuerde 10 minutos antes. y por correo dos diasn antes\"\n",
     "\n",
     "events = agent_executor.stream(\n",
     "    {\"messages\": [(\"user\", example_query)]},\n",
